<resources>
    <string name="app_name">Refectory</string>
    <string name="welcome">Welcome</string>
    <string name="join_us">Join Us</string>

    <string name="tax_code">Tax Code</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>


    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>

    <string name="total_credit">Total Credit:</string>
    <string name="most_credit_at">Most Credit At:</string>

    <string name="restaurants">Restaurants</string>
    <string name="profile">Profile</string>
    <string name="weekly_report">Weekly Report</string>

    <string name="login_error_empty_tax_code">Tax Code can\'t left blank.</string>
    <string name="login_error_wrong_tax_code_length">Length of Tax Code is not correct.</string>

    <string name="sign_up_error_empty_name">Name can\'t left blank.</string>
    <string name="sign_up_error_empty_surname">Surname can\'t left blank.</string>
</resources>