package m.derakhshan.refectory.core.domain.utils

object TestingConstant {

    const val AUTHENTICATION_SCREEN_TAX_CODE_EDIT_TEXT = "AUTHENTICATION_SCREEN_TAX_INPUT"
    const val AUTHENTICATION_SCREEN_LOGIN_BUTTON = "AUTHENTICATION_SCREEN_LOGIN_BUTTON"

    const val SIGNUP_SCREEN_TAX_CODE_EDIT_TEXT = "SIGNUP_SCREEN_TAX_CODE_EDIT_TEXT"
    const val SIGNUP_SCREEN_NAME_EDIT_TEXT = "SIGNUP_SCREEN_NAME_EDIT_TEXT"
    const val SIGNUP_SCREEN_SURNAME_EDIT_TEXT = "SIGNUP_SCREEN_SURNAME_EDIT_TEXT"
    const val SIGNUP_SCREEN_EMAIL_EDIT_TEXT = "SIGNUP_SCREEN_EMAIL_EDIT_TEXT"
    const val SIGNUP_SCREEN_PHONE_EDIT_TEXT = "SIGNUP_SCREEN_PHONE_EDIT_TEXT"
    const val SIGNUP_SCREEN_SIGNUP_BUTTON = "SIGNUP_SCREEN_SIGNUP_BUTTON"

}